BARC UAT/src/objects/Bulk_Inventory_Products__c.object
<CustomObject>
    <fields>
        <fullName>Inventory__c</fullName>
        <label>Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Bulk Inventory Products</relationshipLabel>
        <relationshipName>Bulk_Inventory_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Bulk Inventory Products</relationshipLabel>
        <relationshipName>Bulk_Inventory_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_Quantity__c</fullName>
        <label>Received Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Faulty_Quantity__c</fullName>
        <label>Total Faulty Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>Warehouse__c</referenceTo>
        <relationshipLabel>Bulk Inventory Products</relationshipLabel>
        <relationshipName>Bulk_Inventory_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bulk Inventory Products</label>
    <nameField>
        <displayFormat>BINP-{0}</displayFormat>
        <label>Bulk Inventory Products No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Inventory Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FaultyyQuantity</fullName>
        <active>true</active>
        <description>Faulty Quantity should not be greater then Received Quantity</description>
        <errorConditionFormula>Received_Quantity__c &lt;  Total_Faulty_Quantity__c</errorConditionFormula>
        <errorDisplayField>Total_Faulty_Quantity__c</errorDisplayField>
        <errorMessage>Faulty Quantity should not be greater then Received Quantity</errorMessage>
    </validationRules>
</CustomObject>